# mfpipe

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  gtest.cmake
scripts/: dependencies.bat  dependencies.sh
src/: CMakeLists.txt  MFPipe.h  MFPipeImpl.cpp  MFPipeImpl.h  MFTypes.cpp  MFTypes.h
src/internal/: ParserServer.cpp  ParserServer.h  UDP.h  serialization.h
src/internal/protocols/: ipipe.h  udp.cpp  udp.h
tests/: CMakeLists.txt  common_pipe_test.h  gtest_mfpipe.cpp  unittest_mfpipe.cpp
